fixed delivery title align issue

--- a/xiongmao.css
+++ b/xiongmao.css
@@ -13,6 +13,7 @@
 	margin-left: 200px;
 	padding-left: 20px;
 	padding-top: 1px;
+	text-align: left;
 } 
 body {
 	background-color: #000000;
